// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CopyText click 1`] = `
<div>
  <span
    class="copy-text-item inline-flex items-center cursor-pointer hover:c-#666"
    data-testid="copy-text"
  >
    我是被赋值的文本内容
    <span
      aria-label="copy"
      class="anticon anticon-copy icon-copy-text icon-wrap"
      data-testid="copy-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders CopyText have class with hoverShowEdit 1`] = `
<div>
  <span
    class="copy-text-item inline-flex items-center cursor-pointer hover:c-#666 [&_>.icon-wrap]:hidden [&:hover_>.icon-wrap]:inline-flex"
    data-testid="copy-text"
  >
    我是被赋值的文本内容
    <span
      aria-label="copy"
      class="anticon anticon-copy icon-copy-text icon-wrap"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders CopyText have text content 1`] = `
<div>
  <span
    class="copy-text-item inline-flex items-center cursor-pointer hover:c-#666"
    data-testid="copy-text"
  >
    我是被赋值的文本内容
    <span
      aria-label="copy"
      class="anticon anticon-copy icon-copy-text icon-wrap"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders CopyText without name by snapshot 1`] = `
<div>
  <span
    class="copy-text-item inline-flex items-center cursor-pointer hover:c-#666"
  >
    复制内容
    <span
      aria-label="copy"
      class="anticon anticon-copy icon-copy-text icon-wrap"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </span>
</div>
`;
